feat(language): reworked messages and formatting